[package]
name = "actixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "3.3"
actix-web = "4.3.1"
config = "0.10"
# tokio = { version = "1", features = ["full"] }
tokio = "1.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
lazy_static = "1.4"
